update: Update projectRecruitingList, projectRecruitingCompleteList func