@@ -128,41 +128,40 @@ public class ProjectServiceImpl implements ProjectService {
     }
 
     @Override
-    public List<NoneLoginProjectSimpleDto> NoneLoginProjectRecruitingList(Pageable pageable) throws Exception {
-        Page<Project> projectPage = projectRepository.findByStateProjectPage(true, false, pageable);
+    public List<ProjectSimpleDto> findProjectList(boolean state, boolean delete, Pageable pageable) throws Exception {
+        Page<Project> projectPage = projectRepository.findByStateProjectPage(state, delete, pageable);
 
-        List<NoneLoginProjectSimpleDto> projectSimpleDtoList = projectPage.map(project -> NoneLoginProjectSimpleDto.builder()
-                .no(project.getNo())
-                .name(project.getName())
-                .profile(null)
-                .maxPeople(project.getMaxPeople())
-                .currentPeople(project.getCurrentPeople())
-                .viewCount(project.getViewCount())
-                .commentCount(project.getCommentCount())
-                .register(project.getCreateUserName())
-                .build()).toList();
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        List<ProjectSimpleDto> projectSimpleDtoList = null;
+        if (authentication instanceof AnonymousAuthenticationToken) {
+            projectSimpleDtoList = projectPage.map(project -> ProjectSimpleDto.builder()
+                    .no(project.getNo())
+                    .name(project.getName())
+                    .profile(null)
+                    .maxPeople(project.getMaxPeople())
+                    .currentPeople(project.getCurrentPeople())
+                    .viewCount(project.getViewCount())
+                    .commentCount(project.getCommentCount())
+                    .register(project.getCreateUserName())
+                    .bookMark(false)
+                    .build()).toList();
 
-        return projectSimpleDtoList;
-    }
-
-    @Override
-    public List<LoginProjectSimpleDto> LoginProjectRecruitingList(Pageable pageable) throws Exception {
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-
-        List<Long> projectBookMarkList = bookMarkRepository.findByUserNo(user.getNo()).stream().map(bookMark -> bookMark.getProject().getNo()).collect(Collectors.toList());
-        Page<Project> projectPage = projectRepository.findByStateProjectPage(true, false, pageable);
-
-        List<LoginProjectSimpleDto> projectSimpleDtoList = projectPage.map(project -> LoginProjectSimpleDto.builder()
-                .no(project.getNo())
-                .name(project.getName())
-                .profile(null)
-                .maxPeople(project.getMaxPeople())
-                .currentPeople(project.getCurrentPeople())
-                .bookMark(projectBookMarkList.contains(project.getNo()) ? true : false)
-                .viewCount(project.getViewCount())
-                .commentCount(project.getCommentCount())
-                .register(project.getCreateUserName())
-                .build()).toList();
+        } else {
+            Object principal = authentication.getPrincipal();
+            User user = (User) principal;
+            List<Long> bookMarkList = bookMarkRepository.findByUserNo(user.getNo()).stream().map(bookMark -> bookMark.getProject().getNo()).collect(Collectors.toList());
+            projectSimpleDtoList = projectPage.map(project -> ProjectSimpleDto.builder()
+                    .no(project.getNo())
+                    .name(project.getName())
+                    .profile(null)
+                    .maxPeople(project.getMaxPeople())
+                    .currentPeople(project.getCurrentPeople())
+                    .viewCount(project.getViewCount())
+                    .commentCount(project.getCommentCount())
+                    .register(project.getCreateUserName())
+                    .bookMark(bookMarkList.contains(project.getNo()))
+                    .build()).toList();
+        }
 
         return projectSimpleDtoList;
     }
